--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": ">=5.4.0",
         "psr/cache": "^1.0",
+        "psr/logger": "*",
         "phossa-shared": "~1.*"
     },
     "archive": {
