--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "phossa/phossa-cache",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "license": "MIT",
     "type": "library",
     "description": "The PSR-6 compliant PHP caching system.",
@@ -19,7 +19,7 @@
         "php": ">=5.4.0",
         "psr/cache": "^1.0",
         "psr/log": "*",
-        "phossa-shared": "1.*"
+        "phossa/phossa-shared": "1.*"
     },
     "archive": {
         "exclude": ["!vendor", "tests", "*phpunit.xml",  "composer.lock"]
