--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,13 @@
     "require": {
         "php": ">=5.4.0",
         "psr/cache": "^1.0",
-        "psr/log": "*",
         "phossa/phossa-shared": "^1.0.6"
+    },
+    "provide": {
+        "psr/cache-implementation": "1.0.0"
+    },
+     "suggest": {
+        "psr/log": "Allows log messages"
     },
     "archive": {
         "exclude": ["!vendor", "tests", "*phpunit.xml",  "composer.lock"]
