--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
         "psr/cache": "^1.0",
         "phossa/phossa-shared": "^1.0.6"
     },
+    "require-dev": {
+        "psr/log": "^1.0"
+    },
     "provide": {
         "psr/cache-implementation": "1.0.0"
     },
